seems like the problem was fixed by using fetch.. will text it on firefox soon

--- a/src/static/css/RandomMovie.css
+++ b/src/static/css/RandomMovie.css
@@ -20,14 +20,6 @@
     /* height: 500px !important; */
 }
 
-.slide-segment {
-    
-    left: -100px;
-    /* width: 100px;
-    height: 100px; */
-    /* background: blue; */
-}
-
 .column {
     float: left;
     /* width: 50%; */
